--- a/calibration.tex
+++ b/calibration.tex
@@ -1,21 +1,14 @@
 \section{Simulation Calibration}
-\ignorethis{\karen{Need to motivate why we pick these simulation parameters.}}
-Although the optimal controllers $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks in the real world. One cause of this failure is the erroneous parameter settings in the physical simulation, such as the mass, the moment of inertia, the COM of each body segment, and the gains of the actuators. Usually, simulation parameters are set according to the specification of the robot. However, we find that many of these specifications are inaccurate. For example, there is about 40\% of error in the total mass of our robot between the open-source CAD file and our own measurement. Instead of trusting these parameters, we decide to adjust them in simulation calibration. We formulate an optimization that searches for the simulation parameters $\boldsymbol{\theta}$ to minimize the discrepancy $E_{cali}$ between the simulated results and the robot performance in the real environment.
+
+Although the optimal reference trajectory $\bar{\mathbf{q}}(t)$ can work effectively in the simulation, they may fail to achieve the tasks in the real world. One cause of this failure is the erroneous parameter settings in the physical simulation, such as the mass, the moment of inertia, the COM of each body segment, and the gains of the actuators. Usually, simulation parameters are set according to the specification of the robot. However, we find that many of these specifications are inaccurate. For example, there is about 40\% of error in the total mass of our robot between the open-source CAD file and our own measurement. Instead of trusting these parameters, we decide to adjust them in simulation calibration. We formulate an optimization that searches for the simulation parameters $\boldsymbol{\theta}$ to minimize the discrepancy between the simulated results and the robot performance in the real environment.
 
 \begin{equation}
- \min_{\boldsymbol{\theta}} E_{cali}
-\label{eqn:calibration}
+\boldsymbol{\theta}=\arg\min\frac{1}{n}\sum_{i=1}^{n}\int_{0}^{T+1}||\tilde{\mathbf{q}}_i(t)-\mathbf{q}_i(t;\boldsymbol{\theta})||_{\mathbf{W}}^2\mathrm{d}t
+  \label{eqn:calibrationObj}
 \end{equation}
+where $\mathbf{q}(t;\boldsymbol{\theta})$ is the sequence of simulated robot states with simulation parameter $\boldsymbol{\theta}$. The subscript $i$ denotes that this sequence is generated using the optimal reference trajectory found in the $i$th iteration of the ``trajectory optimization-simulation calibration'' loop. $\tilde{\mathbf{q}}_i(t)$ is the real robot states\footnote{We execute the same reference trajectory three times and average the three sequences as $\tilde{\mathbf{q}}(t)$ in the robot experiments to smooth out the noise and slight perturbations in initial conditions.} by executing the same reference trajectory. $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint. In our case, We use the same $\mathbf{W}$ among all the tasks and choose the $\mathbf{W}$ to heavily penalize the difference in root (robot torso) orientation. 
 
 Although there are dozens of simulation parameters $\boldsymbol{\theta}$ that we could calibrate, we choose to focus on the most relevant parameters to our tasks. Our tasks involve changing postures and maintaining balance. We decide to calibrate only the gains of the actuators and the COM of each body segment because the actuator gains are critical to posture change and the COM is vital to balance.
 
-$E_{cali}$ is defined as the difference between the state trajectories in the simulation and those collected in the real robot experiments when the same controller is used in both scenarios:
-
-\begin{equation}
-  E_{cali}=\frac{1}{n}\sum_{i=1}^{n}\int_{0}^{T+1}||\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))-\mathbf{x}(\bar{\mathbf{q}}_i(t);\boldsymbol{\theta})||_{\mathbf{W}}^2\mathrm{d}t
-  \label{eqn:calibrationObj}
-\end{equation}
-Recall that our entire algorithm is an iterative process. At the $n$th iteration, the optimal controller $\bar{\mathbf{q}}_n(t)$ produces the state trajectory $\mathbf{x}(\bar{\mathbf{q}}_n(t);\boldsymbol{\theta})$ in the simulation and $\tilde{\mathbf{x}}(\bar{\mathbf{q}}_n(t))$ on the real robot\footnote{We use an average of three trajectories as $\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))$ in the robot experiments to smooth out the noise and other possible perturbations.}. Note that the simulated trajectory depends on both the controller $\bar{\mathbf{q}}_n(t)$ and the simulation parameters $\boldsymbol{\theta}$. $E_{cali}$ is measured using all $n$ optimal controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ and their associated state trajectories $\{\tilde{\mathbf{x}}(\bar{\mathbf{q}}_i(t))\}_{i=1,...,n}$ from the current and the previous iterations. $\mathbf{W}$ is a weight matrix, which encapsulates the relative importance of each joint. In our case, we choose the $\mathbf{W}$ to heavily penalize the difference in root orientation. We use the same $\mathbf{W}$ among all the tasks.
-
-Due to the presence of contact changes in the locomotion task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibration}) is challenging using traditional continuous optimization algorithms. Similar to controller optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\boldsymbol{\theta}$. To evaluate each CMA sample, we set the parameters $\boldsymbol{\theta}$ in the physical simulator, execute the controllers $\{\bar{\mathbf{q}}_i(t)\}_{i=1,...,n}$ to simulate the robot motions $\{\mathbf{x}(\bar{\mathbf{q}}_i(t);\boldsymbol{\theta})\}_{i=1,...,n}$, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
+Due to the presence of contact changes in the transition task and the complex interplay between the simulation results and the simulation parameters, the optimization (\ref{eqn:calibrationObj}) is challenging using traditional continuous optimization algorithms. Similar to trajectory optimization, we choose to use CMA as the optimization solver. In this case, each CMA sample is a candidate set of simulation parameters $\boldsymbol{\theta}$. To evaluate each CMA sample, we set the parameters $\boldsymbol{\theta}$ in the physical simulator, simulate the robot movement, and then evaluate the objective function eq. (\ref{eqn:calibrationObj}).
 
