--- a/optimization.tex
+++ b/optimization.tex
@@ -1,28 +1,19 @@
 \section{Trajectory Optimization}
-\ignorethis{
-\karen{If the goal is to create robust controllers, can we later use the calibrated simulation parameters to create a feedback controller (\eg using inverted pendulum model) via simulator?}
-\jie{I hope so but I do not know. Since our experiments only cover open-loop control, it might not be necessary to speculate whether our system will work on feedback controller in the paper. But I still mention that extending the current system to feedback controllers is one of the future wok.}
-\karen{I agree that this should be considered as future work. I belive that matching simulation and reality will be much more difficult for a feedback controller. I think of our algorithm as to match stability region of simulation with that of hardware. For open-loop controller, we need to match two points, but for feedback controller we need to match two manifolds.}}
 
-Given the physical simulation, we can design controllers to enable the robot to achieve various locomotion tasks in the simulated environment. The four tasks that we use to test our system are rising from a sitting, leaning or kneeling position and flipping towards a handstand position (Figure \ref{fig:sit2Stand}, \ref{fig:lean2Stand}, \ref{fig:kneel2Stand} and \ref{fig:stand2Hand}). For each task, the initial pose $\bar{\mathbf{q}}(0)$, the final pose $\bar{\mathbf{q}}(T)$ and the length of the motion $T$ are provided by the user. The goal of this optimization is to find a reference trajectory $\bar{\mathbf{q}}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to control the robot with only open-loop reference trajectories\footnote{The internal feedback loop in the actuators still exist but we do not alter this feedback loop in our controller design.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a function of time $t$ and does not depend on the states of the robot. Using only the open-loop reference trajectory can better evaluate our system, especially simulation calibration, because the accuracy of the simulation becomes more critical if no feedback is involved.
+Given the physical simulation, we can design controllers to enable the robot to achieve various transition tasks in the simulated environment. The four tasks that we use to test our system are rising from a sitting, leaning or kneeling position and flipping towards a handstand position (Figure \ref{fig:sit2Stand}, \ref{fig:lean2Stand}, \ref{fig:kneel2Stand} and \ref{fig:stand2Hand}). For each task, the initial pose $\bar{\mathbf{q}}(0)$ and the final pose $\bar{\mathbf{q}}(T)$ are given as the input. The goal of this optimization is to find a reference trajectory $\bar{\mathbf{q}}(t)$ so that the robot can move from the initial to the final pose without losing balance. We purposefully choose to control the robot with only open-loop reference trajectories\footnote{The internal feedback loop in the actuators still exist but we do not alter this feedback loop in our trajectory optimization.} in this work, which means that the control signal $\bar{\mathbf{q}}(t)$ is a function of time $t$ and does not depend on the states of the robot. Using only the open-loop reference trajectory can better evaluate our system, especially simulation calibration, because the accuracy of the simulation becomes more critical if no feedback balance control is involved.
 
 \subsection{Trajectory Parameterization}
-We parameterize the reference trajectory $\bar{\mathbf{q}}(t)$ with a sparse set of keyframes $\{\bar{\mathbf{q}}_i\}_{i=1...n}$ at time $\{t_i\}_{i=1...n}$. The reference trajectory is linearly interpolated between the keyframes. The optimization searches for both the joint configuration and the time of each keyframe. In our implementation, the number of keyframes $n$ is fixed and specified by the user, although it is possible to search for it in an outer-loop optimization.
+We parameterize the reference trajectory $\bar{\mathbf{q}}(t)$ with a sparse set of keyframes $\{\bar{\mathbf{q}}_i\}_{i=1...n}$ at time $\{t_i\}_{i=1...n}$. The reference trajectory is linearly interpolated between the keyframes. The optimization searches for both the joint configuration and the time of each keyframe. In our implementation, the number of keyframes $n$ is fixed and manually specified by the user, although it is possible to incorporate it in an outer-loop optimization.
 
-\ignorethis{
-\karen{Why do we have to assume no inter-body collision? There are many other possible ways that the desired trajectoires achieve the objective in an undesired way (\eg jump of the ground), do we also need to assume that those situations won't happen? More fundamental question: how can we make any of these assumptions while our optimizer doesn't know about these assumptions?}
-\jie{I removed the first few sentences that confuse you. Actually we do not assume anything. If the robot jumps off the ground in the simulation, we do not do anything to prevent that. You can see this from the video of stand-to-handstand. Before simulation calibration, the optimal controller indeed jumps in the simulation. But after calibration, the optimal controller does not jump in the simulation, which matches the real world performance. In term of self-collision, it did not happen because we chose a reasonable range of joint angles to search in CMA.}
-\karen{That sounds fine.}
-}
 
 \subsection{Fitness Function}
 The criterion of success for all the tasks is whether the robot remains upright (or upside down in the last task) at the end of its motion. We use the following fitness function to reward the trajectories that keep the robot balanced throughout the entire motion.
 
 \begin{equation}
-  \{\bar{\mathbf{q}}_i\}_{i=1...n}, \{{t}_i\}_{i=1...n}=\argmax\int_0^{T+1} \frac{1}{\alpha(t)+\epsilon}\mathrm{d}t
+  \{\bar{\mathbf{q}}_i\}_{i=1...n}, \{{t}_i\}_{i=1...n}=\argmax\int_0^{T+1} \frac{1}{|\alpha(t)|+\epsilon}\mathrm{d}t
   \label{eqn:controllerObj}
 \end{equation}
-where $\alpha$ is the angle magnitude between the up direction in the local frame of the robot's torso and the up (or down in the last task) direction in the global frame. It measures how far the robot is from losing its balance. $\epsilon$ is a small positive number to prevent the denominator from being zero. We choose $\epsilon=0.1$ in all our tasks. Note that the upper limit of the integration is $T+1$. The extra one second is to wait for the robot to settle down. We use the time horizon $T+1$ because it is still possible that the robot can fall during the settling down phase and our fitness function will penalize this situation.
+where $\alpha$ is the angle between the up direction in the local frame of the robot's torso and the up (or down in the last task) direction in the global frame. It measures how far the robot is from losing its balance. $\epsilon$ is a small positive number to prevent the denominator from being zero. We choose $\epsilon=0.1$ in all our tasks. $T$ is the time when the robot reaches the final pose. Note that the upper limit of the integration is $T+1$. The extra one second is to wait for the robot to settle down. We use the time horizon $T+1$ because it is still possible that the robot can fall during the settling down phase and our fitness function will penalize this situation.
 
 \subsection{Optimization with CMA}
-During locomotion, discrete contact events can happen frequently. They impose additional challenges for the continuous optimization algorithms that rely on gradient information. To overcome this challenge, we choose to use CMA to optimize the reference trajectory. CMA is a sample-based stochastic optimization algorithm, which has a solid theoretical foundation \cite{akimoto:2010,glasmachers:2010}. It does not need gradient information and can explore multiple local minima. This makes it ideal to optimize open loop trajectories and feedback controllers for locomotion tasks. For the completeness of the paper, we will briefly describe the CMA algorithm here. Please refer to the original paper \cite{Hansen:2009} for more details. At each iteration, a population of CMA samples are drawn from an underlying Gaussian distribution. In our case, a CMA sample is a set of keyframes and their associated time. Each CMA sample is used to control the robot in the simulation and evaluated using eq.(\ref{eqn:controllerObj}). The samples with lower fitness values are discarded. The underlying Gaussian distribution is updated according to the remaining good samples. With more iterations, the distribution gradually converges to a better region of the search space. After a maximum number of iterations, we choose the best CMA sample and reconstruct the optimal reference trajectory $\bar{\mathbf{q}}(t)$.
+During the transition motion, discrete contact events can happen frequently. They impose additional challenges for the continuous optimization algorithms that rely on gradient information. To overcome this challenge, we choose to use CMA to optimize the reference trajectory. CMA is a sample-based stochastic optimization algorithm, which has a solid theoretical foundation \cite{akimoto:2010,glasmachers:2010}. It does not need gradient information and can explore multiple local minima. This makes it ideal to optimize open loop trajectories or feedback controllers for transition tasks. For the completeness of the paper, we will briefly describe the CMA algorithm here. Please refer to the original paper \cite{Hansen:2009} for more details. At each iteration, a population of CMA samples are drawn from an underlying Gaussian distribution. In our case, a CMA sample is a set of keyframes and their associated time. Each CMA sample is used to control the robot in the simulation and evaluated using eq.(\ref{eqn:controllerObj}). The samples with lower fitness values are discarded. The underlying Gaussian distribution is updated according to the remaining good samples. With more iterations, the distribution gradually converges to a better region of the search space. After a maximum number of iterations, we choose the best CMA sample and reconstruct the optimal reference trajectory $\bar{\mathbf{q}}(t)$.
